time series analysis exercise

--- a/twitter-sentiment-analysis/twitter-sentiment-analysis.ipynb
+++ b/twitter-sentiment-analysis/twitter-sentiment-analysis.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "6825"
       ]
      },
-     "execution_count": 400,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "6825"
       ]
      },
-     "execution_count": 401,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,25 +201,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "tfidf_data = tfidf.fit_transform(tweet_data_clean)\n",
-    "tfidf_data = tfidf_data.todense()"
+    "#tfidf_data = tfidf_data.todense()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of negative comments: 3372\n",
-      "Number of positive comments: 3374\n"
+      "Number of negative comments: 3410\n",
+      "Number of positive comments: 3415\n"
      ]
     }
    ],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,16 +268,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import accuracy_score, confusion_matrix"
+    "from sklearn.metrics import accuracy_score, confusion_matrix, precision_score, recall_score, roc_auc_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        "GaussianNB()"
       ]
      },
-     "execution_count": 412,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,22 +316,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.6760398359695372\n",
+      "Accuracy:  0.7065026362038664\n",
+      "Precision: 0.6727107887579329\n",
+      "Recall Score: 0.8412698412698413\n",
+      "ROC-AUC-Score: 0.7018470418470419\n",
       "Confusion Matrix: \n",
-      " [[424 401]\n",
-      " [152 730]]\n"
+      " [[464 361]\n",
+      " [140 742]]\n"
      ]
     }
    ],
    "source": [
     "print('Accuracy: ', accuracy_score(y_test, y_pred))\n",
+    "print('Precision:', precision_score(y_test, y_pred))\n",
+    "print('Recall Score:', recall_score(y_test, y_pred))\n",
+    "print('ROC-AUC-Score:', roc_auc_score(y_test, y_pred))\n",
     "print('Confusion Matrix: \\n', confusion_matrix(y_test, y_pred))"
    ]
   },
@@ -344,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +359,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 425,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,22 +382,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.7492677211482133\n",
+      "Accuracy:  0.7539543057996485\n",
+      "Precision: 0.7583892617449665\n",
+      "Recall Score: 0.7687074829931972\n",
+      "ROC-AUC-Score: 0.7534446505875076\n",
       "Confusion Matrix: \n",
-      " [[593 232]\n",
-      " [196 686]]\n"
+      " [[609 216]\n",
+      " [204 678]]\n"
      ]
     }
    ],
    "source": [
     "print('Accuracy: ', accuracy_score(y_test, y_pred))\n",
+    "print('Precision:', precision_score(y_test, y_pred))\n",
+    "print('Recall Score:', recall_score(y_test, y_pred))\n",
+    "print('ROC-AUC-Score:', roc_auc_score(y_test, y_pred))\n",
     "print('Confusion Matrix: \\n', confusion_matrix(y_test, y_pred))"
    ]
   },
@@ -404,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +425,7 @@
        "RandomForestClassifier()"
       ]
      },
-     "execution_count": 428,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,24 +448,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.7387229056824839\n",
+      "Accuracy:  0.7586408904510837\n",
+      "Precision: 0.7225378787878788\n",
+      "Recall Score: 0.8650793650793651\n",
+      "ROC-AUC-Score: 0.754963924963925\n",
       "Confusion Matrix: \n",
-      " [[514 311]\n",
-      " [135 747]]\n"
+      " [[532 293]\n",
+      " [119 763]]\n"
      ]
     }
    ],
    "source": [
     "print('Accuracy: ', accuracy_score(y_test, y_pred))\n",
+    "print('Precision:', precision_score(y_test, y_pred))\n",
+    "print('Recall Score:', recall_score(y_test, y_pred))\n",
+    "print('ROC-AUC-Score:', roc_auc_score(y_test, y_pred))\n",
     "print('Confusion Matrix: \\n', confusion_matrix(y_test, y_pred))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
